--- a/experiment/bandit-musdb18hq-vocals.yaml
+++ b/experiment/bandit-musdb18hq-vocals.yaml
@@ -4,7 +4,8 @@ defaults:
 - logger: wandb
 - loss: l1snr
 - metrics: default
-- optimizer: adamw
+- optimizer: adam
+- trainer: default
 - _self_
 
 seed: 42
