--- a/experiment/bandit-musdb18hq.yaml
+++ b/experiment/bandit-musdb18hq.yaml
@@ -13,3 +13,4 @@ seed: 42
 hydra:
   searchpath:
   - file:///home/kwatchar3/projects/banda/configs
+  - file:///storage/ice1/4/1/kwatchar3/banda/configs
