--- a/experiment/bandit-musdb18hq-vocals.yaml
+++ b/experiment/bandit-musdb18hq-vocals.yaml
@@ -1,5 +1,5 @@
 defaults:
-- model: bandit-mus64-vocals
+- model: bandit-mus64
 - data: musdb18hq
 - logger: wandb
 - loss: l1snr
@@ -8,8 +8,22 @@ defaults:
 - trainer: default
 - _self_
 
+stems: [ "vocals" ]
+# - vocals
+# - drums
+# - bass
+# - other
+
+model:
+  params:
+    stems: ${stems}
+
+metrics:
+  stems: ${stems}
+
 seed: 42
 
 hydra:
   searchpath:
   - file:///home/kwatchar3/projects/banda/configs
+  - file:///storage/ice1/4/1/kwatchar3/banda/configs
