--- a/configs/data/moisesdb.yaml
+++ b/configs/data/moisesdb.yaml
@@ -53,7 +53,6 @@ val:
       load_duration: true
       stems: _moises_vdbo
 
-
   dataset:
     cls: DeterministicChunkDataset
     params:
@@ -78,6 +77,7 @@ test:
   - cls: MoisesDBDatasource
     params:
       split: test
+      stems: _moises_vdbo
 
   dataset:
     cls: FullTrackDataset
