add vocals only config

--- a/experiment/bandit-musdb18hq-dbm-vocals.yaml
+++ b/experiment/bandit-musdb18hq-dbm-vocals.yaml
@@ -10,7 +10,7 @@ defaults:
 
 model:
   params:
-    stems: [ 'vocals', 'drums', 'bass', 'other' ]
+    stems: [ 'vocals' ]
 
 metrics:
   stems: ${..model.params.stems}
