--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "torchmetrics",
     "soundfile",
     "audiomentations",
-    "spafe"
+    "spafe",
+    "pre-commit"
 ]
 requires-python = ">=3.12"
 readme = "README.md"
