--- a/configs/data/moisesdb.yaml
+++ b/configs/data/moisesdb.yaml
@@ -86,9 +86,11 @@ test:
       fs: 44100
       allow_autolooping: false
 
+      variable_sources: true
+
   dataloader:
     batch_size: 1
     num_workers: 4
-    shuffle: true
+    shuffle: false
     drop_last: False
     pin_memory: true
