--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "audiomentations",
     "spafe",
     "pre-commit",
-    "pandas"
+    "pandas",
+    "mamba-ssm",
+    "causal-conv1d",
+    "torchtune"
 ]
 requires-python = ">=3.12"
 readme = "README.md"
