--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "pandas",
     "mamba-ssm",
     "causal-conv1d",
-    "torchtune"
+    "torchtune",
+    "torchao"
 ]
 requires-python = ">=3.12"
 readme = "README.md"
