--- a/experiments/bandit-l1snr-adam-musdb18hq-vdbo.yaml
+++ b/experiments/bandit-l1snr-adam-musdb18hq-vdbo.yaml
@@ -1,5 +1,5 @@
 defaults:
-- model: bandroformer-mus64
+- model: bandit
 - data: musdb18hq
 - logger: wandb
 - loss: l1snr
@@ -8,17 +8,17 @@ defaults:
 - trainer: default
 - inference: default
 - _self_
-
-model:
-  params:
-    stems: [ 'vocals', 'drums', 'bass', 'other' ]
-
-metrics:
-  stems: ${..model.params.stems}
-
-seed: 42
-
 hydra:
   searchpath:
   - file:///home/kwatchar3/projects/banda/configs
   - file:///storage/ice1/4/1/kwatchar3/banda/configs
+metrics:
+  stems: ${..model.params.stems}
+model:
+  params:
+    stems:
+    - vocals
+    - drums
+    - bass
+    - other
+seed: 42
