--- a/experiments/bandroformer-l1snr-adam-moisesdb-vdbo.yaml
+++ b/experiments/bandroformer-l1snr-adam-moisesdb-vdbo.yaml
@@ -1,6 +1,6 @@
 defaults:
-- model: bandmamba-mus64
-- data: musdb18hq
+- model: bandroformer
+- data: moisesdb
 - logger: wandb
 - loss: l1snr
 - metrics: default
@@ -8,17 +8,17 @@ defaults:
 - trainer: default
 - inference: default
 - _self_
-
-model:
-  params:
-    stems: [ 'vocals', 'drums', 'bass', 'other' ]
-
-metrics:
-  stems: ${..model.params.stems}
-
-seed: 42
-
 hydra:
   searchpath:
   - file:///home/kwatchar3/projects/banda/configs
   - file:///storage/ice1/4/1/kwatchar3/banda/configs
+metrics:
+  stems: ${..model.params.stems}
+model:
+  params:
+    stems:
+    - vocals
+    - drums
+    - bass
+    - other
+seed: 42
