--- a/configs/data/moisesdb-query.yaml
+++ b/configs/data/moisesdb-query.yaml
@@ -1,21 +1,24 @@
 defaults:
-- augmentation@train.dataset.params.premix_augmentation: default
+- augmentation/default
 - _self_
 
 train:
   datasource:
-  - cls: MUSDB18HQDatasource
+  - cls: MoisesDBDatasource
     params:
       split: train
+      stems: null
+      mode: fine
 
   dataset:
-    cls: RandomChunkDataset
+    cls: RandomChunkSelfQueryDataset
     params:
       n_channels: 2
       fs: 44100
       chunk_size_seconds: 6.0
       allow_autolooping: true
       max_dataset_size: 8192
+      variable_sources: true
 
   dataloader:
     batch_size: 8
@@ -27,13 +30,15 @@ train:
 
 val:
   datasource:
-  - cls: MUSDB18HQDatasource
+  - cls: MoisesDBDatasource
     params:
       split: val
       load_duration: true
+      stems: null
+      mode: fine
 
   dataset:
-    cls: DeterministicChunkDataset
+    cls: DeterministicChunkSelfQueryDataset
     params:
       n_channels: 2
       fs: 44100
@@ -41,6 +46,8 @@ val:
       hop_size_seconds: 6.0
       allow_autolooping: false
       max_dataset_size: 1024
+
+      variable_sources: true
 
   dataloader:
     batch_size: 8
