--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "causal-conv1d",
     "torchtune",
     "torchao",
-    "pyarrow==20.0.0"
+    "pyarrow==20.0.0",
+    "rich",
+    "hear21passt"
 ]
 requires-python = ">=3.12"
 readme = "README.md"
