--- a/experiments/vqbandit-mus64-l1snr-multi-adam-moisesdb-all-coarse.yaml
+++ b/experiments/vqbandit-mus64-l1snr-multi-adam-moisesdb-all-coarse.yaml
@@ -8,14 +8,14 @@ defaults:
 - trainer: default
 - inference: default
 - _self_
-hydra:
-  searchpath:
-  - file:///home/kwatchar3/projects/banda/configs
-  - file:///storage/ice1/4/1/kwatchar3/banda/configs
+
+
 metrics:
   stems: ${..model.params.stems}
+
 model:
   params:
+    max_simultaneous_stems: 4
     stems:
     - "vocals"
     - "drums"
@@ -28,4 +28,11 @@ model:
     - "other_keys"
     - "other_plucked"
     - "other"
+
 seed: 42
+
+
+hydra:
+  searchpath:
+  - file:///home/kwatchar3/projects/banda/configs
+  - file:///storage/ice1/4/1/kwatchar3/banda/configs
