--- a/configs/model/vqbandit-mus64.yaml
+++ b/configs/model/vqbandit-mus64.yaml
@@ -11,7 +11,7 @@ params:
   tf_model:
     params:
       emb_dim: ${...bandsplit.emb_dim}
-    use_split_model: true
+    use_split_model: false
 
   mask_estim:
     emb_dim: ${..bandsplit.emb_dim}
