--- a/configs/preprocess/moisesdb-active.yaml
+++ b/configs/preprocess/moisesdb-active.yaml
@@ -4,7 +4,8 @@ output_path: intermediates
 
 fs: 44100
 frame_length_seconds: 10.0
-hop_length_seconds: 1.0
+hop_length_seconds: 0.1
+top_db: 60.0
 
 split_path: splits.csv
 mode: active
