--- a/configs/model/vqbandit-split-mus64-pre.yaml
+++ b/configs/model/vqbandit-split-mus64-pre.yaml
@@ -11,7 +11,7 @@ params:
   tf_model:
     params:
       emb_dim: ${...bandsplit.emb_dim}
-    use_split_model: false
+    use_split_model: true
 
   mask_estim:
     emb_dim: ${..bandsplit.emb_dim}
@@ -19,3 +19,7 @@ params:
 
   stems: null
   max_simultaneous_stems: 11
+
+  pretrained_encoder_ckpt_path: "./named-checkpoints/bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-8091.ckpt"
+
+
