--- a/experiments/vqbandit-mus64-l1snrz-multi-adam-moisesdb-all-coarse-active.yaml
+++ b/experiments/vqbandit-mus64-l1snrz-multi-adam-moisesdb-all-coarse-active.yaml
@@ -15,7 +15,7 @@ metrics:
 
 model:
   params:
-    max_simultaneous_stems: 4
+    # max_simultaneous_stems: 4
     stems:
     - "vocals"
     - "drums"
