--- a/configs/model/bandit-mus64-pre.yaml
+++ b/configs/model/bandit-mus64-pre.yaml
@@ -6,7 +6,7 @@ defaults:
 - mask_estim@params.mask_estim: default
 - _self_
 
-cls: VectorDictQueryBandit
+cls: FixedStemBandit
 params:
   tf_model:
     params:
@@ -19,3 +19,6 @@ params:
 
   stems: null
   max_simultaneous_stems: 11
+
+  pretrained_encoder_ckpt_path: "./named-checkpoints/bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-8091.ckpt"
+
