--- a/configs/model/bandit-mus64-large.yaml
+++ b/configs/model/bandit-mus64-large.yaml
@@ -21,9 +21,11 @@ params:
     dbrms_threshold: -60
 
   bandsplit:
-    n_bands: 64
-    in_channels: 2
-    emb_dim: 256
+    cls: BandSplitModule
+    params:
+      n_bands: 64
+      in_channels: 2
+      emb_dim: 256
 
   tf_model:
     params:
