--- a/configs/model/bandsplit/mus64_narrow_drop50.yaml
+++ b/configs/model/bandsplit/mus64_narrow_drop50.yaml
@@ -1,7 +1,8 @@
-cls: BandSplitModule
+cls: BandSplitModuleWithDrop
 params:
   n_bands: 64
   in_channels: 2
   emb_dim: 128
+  drop_rate: 0.50
   fb_kwargs:
     octave_per_band_mult: 0.5
