--- a/configs/model/vqlocobandit-mus64.yaml
+++ b/configs/model/vqlocobandit-mus64.yaml
@@ -2,7 +2,7 @@ defaults:
 - stft@params.spectrogram: default
 - normalization@params.normalization: default
 - bandsplit@params.bandsplit: mus64
-- tfmodel@params.tf_model: gru8
+- tfmodel@params.tf_model: locoformer8
 - mask_estim@params.mask_estim: default
 - _self_
 
